--- a/.github/workflows/main_webappblogbalta2812.yml
+++ b/.github/workflows/main_webappblogbalta2812.yml
@@ -9,6 +9,9 @@ on:
       - main
   workflow_dispatch:
 
+env:
+    ConnectionStrings__DefaultConnection: ${{ secrets.AZURE_SQL_CONNECTION_STRING }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -22,9 +25,21 @@ jobs:
           dotnet-version: '6.0.x'
           include-prerelease: true
 
-      - name: Install EF tools
-        run: dotnet tool install --global-ef
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+      - name: Get Current IP Address
+        id: ip
+        uses: haythem/public-ip@v1.2
+
+      - name: Add IP address to SQL Server
+        run: az sql server firewall-rule create --resource-group blog --server blogbalta2012sqlserver --name ghactions --start-ip-address ${{ steps.ip.outputs.ipv4 }} --end-ip-address ${{ steps.ip.outputs.ipv4 }}
+
+      - name: Install EF Tools
+        run: dotnet tool update --global dotnet-ef
+      
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
@@ -57,7 +72,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'webappblogbalta2812'
+          app-name: 'blogbalta2812webapp'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_2E85F2EFCB6C4141B61358D7F6E63FAE }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_63356710178446DC90C3A5AC90A8A321 }}
           package: .
