--- a/.github/workflows/main_webappblogbalta2812.yml
+++ b/.github/workflows/main_webappblogbalta2812.yml
@@ -38,7 +38,7 @@ jobs:
         run: az sql server firewall-rule create --resource-group blog --server blogbalta2012sqlserver --name ghactions --start-ip-address ${{ steps.ip.outputs.ipv4 }} --end-ip-address ${{ steps.ip.outputs.ipv4 }}
 
       - name: Install EF Tools
-        run: dotnet tool update --global dotnet-ef
+        run: dotnet tool install --global dotnet-ef
       
       - name: Build with dotnet
         run: dotnet build --configuration Release
