--- a/.github/workflows/main_webappblogbalta2812.yml
+++ b/.github/workflows/main_webappblogbalta2812.yml
@@ -35,7 +35,7 @@ jobs:
         uses: haythem/public-ip@v1.2
 
       - name: Add IP address to SQL Server
-        run: az sql server firewall-rule create --resource-group blog --server blogbalta2012sqlserver --name ghactions --start-ip-address ${{ steps.ip.outputs.ipv4 }} --end-ip-address ${{ steps.ip.outputs.ipv4 }}
+        run: az sql server firewall-rule create --resource-group blog --server baltablog2812sqlserver --name ghactions --start-ip-address ${{ steps.ip.outputs.ipv4 }} --end-ip-address ${{ steps.ip.outputs.ipv4 }}
 
       - name: Install EF Tools
         run: dotnet tool install --global dotnet-ef
@@ -72,7 +72,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'blogbalta2812webapp'
+          app-name: 'webappblogbalta2812'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_63356710178446DC90C3A5AC90A8A321 }}
           package: .
