--- a/.github/workflows/main_webappblogbalta2812.yml
+++ b/.github/workflows/main_webappblogbalta2812.yml
@@ -41,7 +41,7 @@ jobs:
         run: dotnet tool install --global dotnet-ef
       
       - name: Build with dotnet
-        run: dotnet build --configuration Release -p Blog.csproj
+        run: dotnet build --configuration Release
 
       - name: Update database
         run: dotnet ef database update
